Trying to fix input qty bug on iPhone

--- a/assets/stylesheets/theme/_forms.scss
+++ b/assets/stylesheets/theme/_forms.scss
@@ -67,6 +67,7 @@ input[type=tel] {
 		        box-shadow: none !important;
 		@media all and (max-width: 768px) {
 			left: 0;
+			width: 30%;
 		}
 	}
 	span {
